--- a/table.html
+++ b/table.html
@@ -2,20 +2,20 @@
 <!-- PRODUCT -->
 <table id="product" class="list">
 <thead>
-<tr>
+	<tr>
 	<td class="left">Product Name:</td>
 	<td class="right">Quantity:</td>
 	<td class="right">Priority:</td>
 	<td class="right">Price:</td>
 	<td class="left">Code</td>
-	<td class="left">Added Date:</td>
+	<td class="left">Added By:</td>
 	<td></td>
-</tr>
+	</tr>
 </thead>
 <tfoot>
 	<tr>
 	<td colspan="6"></td>
-	<td class="left"><a onclick="addProduct();" class="button">Add Product</a></td>
+	<td class="left"><button onclick="addProduct();">Add Product</button></td>
 	</tr>
 </tfoot>
 </table>
